<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >


        <RelativeLayout
            android:id="@+id/robust_share_it_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_92"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robust_share_it_title_text"
                android:textColor="@color/robust_share_textview_color"
                android:textSize="@dimen/text_font_size_30" />
        </RelativeLayout>

        <View
            android:id="@+id/robust_share_it_title_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/robust_share_it_title"
            android:background="@color/robust_share_line_color" />

        <LinearLayout
            android:id="@+id/robust_share_it_body"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_214"
            android:layout_below="@+id/robust_share_it_title_line"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/robust_wecate_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_54"
                android:layout_marginTop="@dimen/margin_34"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/margin_114"
                    android:layout_height="@dimen/margin_114"
                    android:src="@drawable/robust_wecate_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/robust_share_it_wecate"
                    android:textColor="@color/robust_share_textview_color"
                    android:textSize="@dimen/text_font_size_22" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/robust_circle_of_friends_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_34"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/margin_114"
                    android:layout_height="@dimen/margin_114"
                    android:src="@drawable/robust_circle_of_friends_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/robust_share_it_friends"
                    android:textColor="@color/robust_share_textview_color"
                    android:textSize="@dimen/text_font_size_22" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/robust_QQ_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_34"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/margin_114"
                    android:layout_height="@dimen/margin_114"
                    android:src="@drawable/robust_qq_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/robust_share_it_qq"
                    android:textColor="@color/robust_share_textview_color"
                    android:textSize="@dimen/text_font_size_22" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/robust_Qzone_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_34"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/margin_114"
                    android:layout_height="@dimen/margin_114"
                    android:src="@drawable/robust_qzone_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/robust_share_it_qzone"
                    android:textColor="@color/robust_share_textview_color"
                    android:textSize="@dimen/text_font_size_22" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/robust_share_it_body_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/robust_share_it_body"
            android:background="@color/robust_share_line_color" />

        <LinearLayout
            android:id="@+id/robust_fuzhulianjie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/robust_share_it_body_line"
            android:layout_marginLeft="@dimen/margin_54"
            android:layout_marginTop="@dimen/margin_34"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/margin_114"
                android:layout_height="@dimen/margin_114"
                android:src="@drawable/robust_link_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_12"
                android:text="@string/robust_share_it_link"
                android:textColor="@color/robust_share_textview_color"
                android:textSize="@dimen/text_font_size_22" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/robust_share_it_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_92"
            android:layout_below="@+id/robust_fuzhulianjie"
            android:layout_marginTop="@dimen/margin_12"
            android:background="@color/photo_select_normal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robust_share_it_bottom_text"
                android:textColor="@color/robust_share_textview_color"
                android:textSize="@dimen/text_font_size_30" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
